objects/project_cloud__Work_Stub__c.object
<CustomObject>
    <description>This is a System object used only for creating Time Entry Stubs. It should not be implemented for any other purpose</description>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <description>Date the stub was created. This is used to flush out old stubs</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hash__c</fullName>
        <formula>CASESAFEID(OwnerId) &amp; CASESAFEID(project_cloud__Parent__c)</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parent__c</fullName>
        <description>The Id of the Parent Object the stub is related to</description>
        <externalId>true</externalId>
        <label>Parent</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>project_cloud__Time__c</fullName>
        <description>The time elapsed as milliseconds. The stopwatch jquery plugin converts this to hh:mm.</description>
        <label>Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Work Stub</label>
    <nameField>
        <displayFormat>STUB-{0}</displayFormat>
        <label>Work Stub Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Stubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>project_cloud__Date_or_Time_Required</fullName>
        <active>true</active>
        <description>Exactly one of the fields Date or Time must be populated on the stub.</description>
        <errorConditionFormula>IF(ISBLANK(project_cloud__Date__c), 0, 1) + IF(ISBLANK(project_cloud__Time__c), 0, 1) != 1</errorConditionFormula>
        <errorMessage>Exactly one of the fields Date or Time must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Parent_Salesforce_Id</fullName>
        <active>true</active>
        <description>The Parent field must be a valid Salesforce Id (This is not looked up in the System, only that the format matches a Salesforce Id).</description>
        <errorConditionFormula>IF(
	REGEX(project_cloud__Parent__c, &apos;^[a-zA-Z0-9]+$&apos;), /** must be alphanumeric **/
	IF(
		 LEN(project_cloud__Parent__c) == 18,
		 CASESAFEID(LEFT(project_cloud__Parent__c, 15)) !=  project_cloud__Parent__c, /** if its 18 characters, verify that the 3 digit calculated suffix is valid **/
		 IF (LEN(project_cloud__Parent__c) == 15, /** any 15 digit alphanumeric is valid **/
			  false,
			  true
		  )
	)
	, true
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Parent__c</errorDisplayField>
        <errorMessage>The value of the parent field must be an Id</errorMessage>
    </validationRules>
</CustomObject>